# cotc

./: .gitignore  AAPL_stock_data_barchart.html  AAPL_stock_data_source.html  README.md  apple_stock_combined.html  apple_stock_data.json  apple_stock_data_1.html  apple_stock_data_2.html  apple_stock_data_3.html  apple_stock_data_4.html  apple_stock_forecasts.csv  ask.py  ask_colab.ipynb  chicago_weather_data.csv  chicago_weather_latest.html  cleaned_daily_stock_data_AAPL.csv  comparison_cotc_totc.md  daily_stock_data_AAPL.json  debug_strings.py  eodhd_api_info.txt  output.txt  primality_test_results.json  prime_numbers.txt  pyproject.toml  requirements.txt  test_logging.py  test_output.txt  test_package_manager.py  test_resilience_api.py
src/: verify_tools.py
src/chatbot/: __init__.py  aggregator.py  api.py  checkpoint.py  dead_letter.py  decomposition.py  executor.py  llm.py  models.py  package_manager.py  tools.py
tests/: test_decomposition.py  test_executor.py  test_retry_context.py
