[project]
name = "fault-tolerant-chatbot"
version = "0.1.0"
description = "Fault-tolerant chatbot with task decomposition and DAG execution"
requires-python = ">=3.10"
dependencies = [
    "redis>=5.0.0",
    "openai>=1.0.0",
    "pydantic>=1.10.0",
    "asyncio-throttle>=1.0.0",
    "ddgs>=7.0.0",
    "scikit-learn>=1.3.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
